part4/4.02/manifests/backend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-go-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-go-backend
  template:
    metadata:
      labels:
        app: todo-go-backend
    spec:
#      initContainers:
#        - name: wait-for-postgres
#          image: busybox:1.28
#          command:
#            [
#              "sh",
#              "-c",
#              'until nc -z postgres-svc 5432; do echo "Waiting for PostgreSQL..."; sleep 2; done; echo "PostgreSQL is up"',
#            ]
#          resources:
#            requests:
#              cpu: "5m"
#              memory: "5Mi"
#            limits:
#              cpu: "20m"
#              memory: "20Mi"

      containers:
        - name: todo-go-backend
          image: djblackett/backend:v2.10.4
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "50m"
              memory: "50Mi"
            limits:
              cpu: "200m"
              memory: "200Mi"
          readinessProbe:
            initialDelaySeconds: 10 # Initial delay until the readiness is tested
            periodSeconds: 5 # How often to test
            httpGet:
              path: /healthz
              port: 8000
          livenessProbe:
            initialDelaySeconds: 20 # Initial delay until the liveness is tested
            periodSeconds: 5 # How often to test
            httpGet:
              path: /healthz
              port: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: todo-go-backend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-go-backend
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8000 #
